src/objects/zkmulti__Detail_Field__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Customs_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customs Item</label>
        <referenceTo>zkmulti__MCCustoms_Item__c</referenceTo>
        <relationshipLabel>Detail Fields</relationshipLabel>
        <relationshipName>Detail_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>zkmulti__MCPackage__c</referenceTo>
        <relationshipLabel>Detail Fields</relationshipLabel>
        <relationshipName>Detail_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Slug__c</fullName>
        <label>Slug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Detail Field</label>
    <nameField>
        <displayFormat>DF-{0000000}</displayFormat>
        <label>Detail Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detail Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>